After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755716 - structure-parser: leaks internal lists
structure-parser: leaks internal lists
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: Normal normal
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-28 08:00 UTC by Justin Kim
Modified: 2015-09-28 14:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GES_STRUCTURE_PARSER (1.67 KB, patch)
2015-09-28 08:01 UTC, Justin Kim
none Details | Review
g_list_free_full (1.68 KB, patch)
2015-09-28 09:10 UTC, Justin Kim
committed Details | Review

Description Justin Kim 2015-09-28 08:00:34 UTC
GList should be freed after usage.
Comment 1 Justin Kim 2015-09-28 08:01:05 UTC
Created attachment 312266 [details] [review]
GES_STRUCTURE_PARSER
Comment 2 Thibault Saunier 2015-09-28 08:03:06 UTC
Review of attachment 312266 [details] [review]:

::: ges/ges-structure-parser.c
@@ -37,1 +38,1 @@
-  for (tmp = ((GESStructureParser *) self)->structures; tmp; tmp = tmp->next) {
+  for (tmp = parser->structures; tmp; tmp = tmp->next) {

g_list_free_full in this case :)
Comment 3 Thibault Saunier 2015-09-28 08:03:08 UTC
Review of attachment 312266 [details] [review]:

::: ges/ges-structure-parser.c
@@ -37,1 +38,1 @@
-  for (tmp = ((GESStructureParser *) self)->structures; tmp; tmp = tmp->next) {
+  for (tmp = parser->structures; tmp; tmp = tmp->next) {

g_list_free_full in this case :)
Comment 4 Justin Kim 2015-09-28 09:10:13 UTC
Created attachment 312271 [details] [review]
g_list_free_full

the simple is the best. :)
Comment 5 Thibault Saunier 2015-09-28 10:04:31 UTC
Review of attachment 312271 [details] [review]:

OK