structure-parser: define GES_STRUCTURE_PARSER macro

And fix trivial leakages of internal list structure.

https://bugzilla.gnome.org/show_bug.cgi?id=755716